--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
 canvas {
   border: 10px solid black;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  cursor: crosshair;
+  cursor: none;
 }
 
 button {
