--- a/src/style.css
+++ b/src/style.css
@@ -32,5 +32,5 @@ button {
 
 button:hover {
   transform: translateY(-4px) scale(1.05);
-  box-shadow: 0 0 25px rgba(245, 193, 108, 1);
+  box-shadow: 0 0 25px rgb(0, 0, 0);
 }
